Adding event to the chord-card to show the detail page (on the chords list)

--- a/src/components/chord-card/chord-card.html
+++ b/src/components/chord-card/chord-card.html
@@ -4,7 +4,7 @@
     </ion-card-header>
     <chord-position *ngIf="_position" [position]="_position"></chord-position>
     <ion-list>
-        <button ion-item (click)="showDetail(chord)">
+        <button ion-item (click)="showDetail()">
             <ion-icon name="musical-note" item-left></ion-icon>
             Details
         </button>
