Adding scale in the chord details

--- a/src/pages/chords-detail/chords-detail.scss
+++ b/src/pages/chords-detail/chords-detail.scss
@@ -1,5 +1,12 @@
 chords-detail {
     ion-card {
+        ion-row.scale {
+            ion-col {
+                text-align: center;
+                color: #cccccc;
+            }
+        }
+
         ion-card-content {
             text-align: center;
         }
