Adding an active state for the correct scale parts

--- a/src/pages/chords-detail/chords-detail.scss
+++ b/src/pages/chords-detail/chords-detail.scss
@@ -11,4 +11,9 @@ chords-detail {
             text-align: center;
         }
     }
+
+    note-name.active {
+        font-weight: bold;
+        color: #000000;
+    }
 }
