--- a/src/components/chord-position/chord-position.html
+++ b/src/components/chord-position/chord-position.html
@@ -1,7 +1,7 @@
-<svg xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" width="250" height="300" viewBox="0 0 210 300">
-    <text *ngFor="let label of getFretLabels(); let i = index" [ngClass]="getFretLabelsClasses(i)" x="-16" y="0" fill="black">{{label}}</text>
+<svg *ngIf="labels" xmlns:svg="http://www.w3.org/2000/svg" xmlns="http://www.w3.org/2000/svg" version="1.1" width="250" height="300" viewBox="0 0 210 300">
+    <text *ngFor="let label of labels; let i = index" [ngClass]="['fret-label fret-label-' + (i+1)]" x="-16" y="0" fill="black">{{label}}</text>
 
-    <g *ngIf="position.start == 1" id="chord-top">
+    <g *ngIf="start == 1" id="chord-top">
     <g class="frets">
     <rect
        transform="matrix(0,1,-1,0,0,0)"
@@ -44,7 +44,7 @@
        id="rect4466"
        style="display:inline;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
     </g>
-    <g class="string string-A" ng-class="{muted:muted['A']}">
+    <g class="string string-A" [ngClass]="{muted:muted['A']}">
     <rect
                                y="38.263737"
                                x="185.3022"
@@ -96,7 +96,7 @@
     </g>
     </g>
 
-    <g *ngIf="position.start > 1" id="chord-middle">
+    <g *ngIf="start > 1" id="chord-middle">
     <g class="frets">
     <rect
        style="display:inline;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1"
@@ -177,7 +177,7 @@
     </g>
     </g>
 
-    <g *ngFor="let finger of getFingers()" [ngClass]="getFretClasses(finger)">
+    <g *ngFor="let finger of fingers" [ngClass]="['finger fret-' + finger.name.name + (finger.fret-start+1)]">
     <path class="finger-border" d="M 14.414842,85.18643 C 4.5178927,80.61869 0.29151272,69.35564 4.8048927,59.57648 c 7.0253593,-15.2219 28.1945493,-15.2219 35.2199093,0 7.45561,16.15412 -9.45583,33.06556 -25.60996,25.60995 z" />
     <path class="finger-filling" d="m 29.993162,80.80268 c 10.5108,-7.08323 10.5108,-19.36918 0,-26.45241 -6.73344,-4.53766 -15.55421,-2.14306 -20.80452,5.64788 -8.45009928,12.5391 8.26543,29.25462 20.80452,20.80453 z" />
     <text x="17" y="76" fill="black" ng-show="finger > 0">{{finger.finger}}</text>
