--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -8,6 +8,9 @@
 
 div.buttons {
     text-align: center;
+    padding-bottom: 16px;
+    border: 1px solid #cccccc;
+    padding-top: 16px;
 }
 
 .content {
