--- a/src/components/chord-position/chord-position.html
+++ b/src/components/chord-position/chord-position.html
@@ -53,7 +53,7 @@
                                id="rect4454"
                                style="fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
     </g>
-    <g class="string string-E" ng-class="{muted:muted['E']}">
+    <g class="string string-E" [ngClass]="{muted:muted['E']}">
     <rect
                                y="38.263737"
                                x="129.94505"
@@ -62,7 +62,7 @@
                                id="rect4444"
                                style="fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
     </g>
-    <g class="string string-C" ng-class="{muted:muted['C']}">
+    <g class="string string-C" [ngClass]="{muted:muted['C']}">
     <rect
                                y="38.263737"
                                x="74.587914"
@@ -71,7 +71,7 @@
                                id="rect4448"
                                style="fill-rule:evenodd;stroke:none;stroke-width:1px;stroke-linecap:butt;stroke-linejoin:miter;stroke-opacity:1" />
     </g>
-    <g class="string string-G" ng-class="{muted:muted['G']}">
+    <g class="string string-G" [ngClass]="{muted:muted['G']}">
     <rect
                                y="38.263737"
                                x="19.230768"
