--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -24,8 +24,8 @@ $font-path: "../assets/fonts";
 // The "primary" color is the only required color in the map.
 
 $colors: (
-  primary:    #387ef5,
-  secondary:  #32db64,
+  primary:    #f82f1f,/* 3857ef5 */
+  secondary:  #b4400d, /* 32db64 */
   danger:     #f53d3d,
   light:      #f4f4f4,
   dark:       #222
