--- a/src/components/chord-position/chord-position.html
+++ b/src/components/chord-position/chord-position.html
@@ -177,7 +177,7 @@
     </g>
     </g>
 
-    <g *ngFor="let finger of fingers" [ngClass]="['finger fret-' + finger.name.name + (finger.fret-start+1)]">
+    <g *ngFor="let finger of fingers" [ngClass]="['finger fret-' + finger.string + (finger.fret)]">
     <path class="finger-border" d="M 14.414842,85.18643 C 4.5178927,80.61869 0.29151272,69.35564 4.8048927,59.57648 c 7.0253593,-15.2219 28.1945493,-15.2219 35.2199093,0 7.45561,16.15412 -9.45583,33.06556 -25.60996,25.60995 z" />
     <path class="finger-filling" d="m 29.993162,80.80268 c 10.5108,-7.08323 10.5108,-19.36918 0,-26.45241 -6.73344,-4.53766 -15.55421,-2.14306 -20.80452,5.64788 -8.45009928,12.5391 8.26543,29.25462 20.80452,20.80453 z" />
     <text x="17" y="76" fill="black" ng-show="finger > 0">{{finger.finger}}</text>
