Game Over screen on the quiz

--- a/src/pages/chords-quiz/chords-quiz.scss
+++ b/src/pages/chords-quiz/chords-quiz.scss
@@ -11,4 +11,23 @@ chords-quiz {
             justify-content: center;
         }
     }
+
+    .done {
+        h1 {
+            text-align: center;
+        }
+
+        h2 {
+            font-size: 100px;
+            text-align: center;
+
+            &.divider {
+                background-color: map-get($colors, 'secondary');
+                font-size: 20px;
+                color: #ffffff;
+                padding: 8px 0;
+            }
+        }
+
+    }
 }
