Changing the list

--- a/src/components/chord-card/chord-card.html
+++ b/src/components/chord-card/chord-card.html
@@ -8,7 +8,7 @@
     <div class="buttons">
         <button (click)="showDetail()" ion-button icon-left>
             <ion-icon name="musical-note" item-left></ion-icon>
-            Details
+            Détails
         </button>
     </div>
 </ion-card>
