--- a/src/app/app.html
+++ b/src/app/app.html
@@ -8,7 +8,7 @@
     
     <ion-content padding>
         <ion-list>
-            <ion-item-divider color="secondary">Chords</ion-item-divider>
+            <ion-item-divider color="secondary">Accords</ion-item-divider>
             <button ion-item *ngFor="let p of chordsPages" (click)="openPage(p)">{{p.title}}</button>
         </ion-list>
     </ion-content>
