--- a/src/components/note-card/note-card.html
+++ b/src/components/note-card/note-card.html
@@ -1,8 +1,13 @@
-<ion-card class="note-card">
+<ion-card class="note-card" *ngIf="isReady">
     <ion-card-header>
         <note-name [note]="_note" [french]="config.ChordsOptions.show_note_in_french"></note-name>
     </ion-card-header>
 
     <musical-note [note]="_note"></musical-note>
+
+    <div class="buttons">
+        <button *ngIf="!isFavorited()" ion-button icon-left (click)="favorite()"><ion-icon name="star"></ion-icon>Ajouter</button>
+        <button *ngIf="isFavorited()" ion-button icon-left (click)="favorite()"><ion-icon name="star"></ion-icon>Enlever</button>
+    </div>
 
 </ion-card>
