--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -28,7 +28,8 @@ $colors: (
   secondary:  #b4400d, /* 32db64 */
   danger:     #f53d3d,
   light:      #f4f4f4,
-  dark:       #222
+  dark:       #222,
+  divider:    #fff700,
 );
 
 
