--- a/src/pages/scales-list/scales-list.scss
+++ b/src/pages/scales-list/scales-list.scss
@@ -8,6 +8,7 @@ scales-list {
         ion-list {
             width: 100%;
             border: 1px solid #ccc;
+            margin-bottom: 10px;
 
             ion-item-divider {
                 border: 0 !important;
