--- a/src/components/musical-note/musical-note.scss
+++ b/src/components/musical-note/musical-note.scss
@@ -15,102 +15,90 @@ musical-note {
         &.sharp {
             g.sharp {
                 display: inline;
-                transform: translate(16px, 0);
+                transform: translate(20px, 0);
             }
         }
 
         &.flat {
             g.flat {
                 display: inline;
-                transform: translate(16px, 0);
+                transform: translate(20px, 0);
             }
         }
 
         g.note {
-            &.line-1 {
-                transform: translate(0px, 40px);
 
+            $lines: -40px 25px;
+            @each $line in $lines {
+                $l: index($lines, $line);
+
+                $positions: 40px 30px 13px 0px -13px -28px -42px -57px -70px -86px -100px -114px -128px -142px;
+                @each $position in $positions {
+                    $i: index($positions, $position);
+
+                    &.position-#{$l} {
+                        &.line-#{$i} {
+                            transform: translate($line, $position);
+                        }
+                    }
+                }
+            }
+
+            &.line-1 {
                 g.stroke { display: inline; }
                 g.down { display: none; }
             }
 
             &.line-2 {
-                transform: translate(0px, 30px);
-
                 g.down { display: none; }
             }
 
             &.line-3 {
-                transform: translate(0px, 13px);
-
                 g.down { display: none; }
             }
 
             &.line-4 {
-                transform: translate(0px, 0px);
-
                 g.down { display: none; }
             }
 
             &.line-5 {
-                transform: translate(0px, -13px);
-
                 g.down { display: none; }
             }
 
             &.line-6 {
-                transform: translate(0px, -28px);
-
                 g.down { display: none; }
             }
 
             &.line-7 {
-                transform: translate(0px, -42px);
-
                 g.up { display: none; }
             }
 
-
             &.line-8 {
-                transform: translate(0px, -57px);
-
                 g.up { display: none; }
             }
 
             &.line-9 {
-                transform: translate(0px, -70px);
-
                 g.up { display: none; }
             }
 
             &.line-10 {
-                transform: translate(0px, -86px);
-
                 g.up { display: none; }
             }
 
             &.line-11 {
-                transform: translate(0px, -100px);
-
                 g.up { display: none; }
             }
 
             &.line-12 {
-                transform: translate(0px, -114px);
-
                 g.up { display: none; }
             }
 
             &.line-13 {
-                transform: translate(0px, -128px);
-
                 g.up { display: none; }
                 g.stroke { display: inline; }
             }
 
             &.line-14 {
-                transform: translate(0px, -142px);
-
                 g.up { display: none; }
                 g.under { display: inline; }
             }
