Adding notes detail

--- a/src/components/note-card/note-card.html
+++ b/src/components/note-card/note-card.html
@@ -6,7 +6,7 @@
     <musical-note [note]="_note" [showHighNote]="_showHighNote"></musical-note>
 
     <div class="buttons">
-        <button ion-button icon-left (click)="favorite()"><ion-icon name="musical-note"></ion-icon>Détail</button>
+        <button ion-button icon-left (click)="showDetail()"><ion-icon name="musical-note"></ion-icon>Détail</button>
     </div>
 
 </ion-card>
