--- a/src/components/note-card/note-card.html
+++ b/src/components/note-card/note-card.html
@@ -3,7 +3,7 @@
         <note-name [note]="_note" [french]="config.general.letter_in_french"></note-name>
     </ion-card-header>
 
-    <musical-note [note]="_note" [singlePosition]="_singlePosition"></musical-note>
+    <musical-note [clef]="_clef" [note]="_note" [singlePosition]="_singlePosition"></musical-note>
 
     <div class="buttons">
         <button ion-button icon-left (click)="showDetail()"><ion-icon name="musical-note"></ion-icon>Détail</button>
