Fixing notes quiz

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -9,7 +9,7 @@
 div.buttons {
     text-align: center;
     padding-bottom: 16px;
-    border: 1px solid #cccccc;
+    border-top: 1px solid #cccccc;
     padding-top: 16px;
 }
 
