Building chords modal

--- a/src/modals/chords-filters/chords-filters.scss
+++ b/src/modals/chords-filters/chords-filters.scss
@@ -1,2 +1,14 @@
 chords-filters-modal {
+    div.notes-filters {
+        ion-segment {
+            ion-segment-button {
+                &.natural,
+                &.flat,
+                &.sharp {
+                    font-size: 20px;
+                    font-weight: bold;
+                }
+            }
+        }
+    }
 }
