Adding an active state on the menu

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -33,3 +33,7 @@ div.buttons {
 .popover-content ion-label {
     white-space: normal;
 }
+
+ion-menu ion-list button.active {
+    font-weight: bold;
+}
