--- a/src/app/app.html
+++ b/src/app/app.html
@@ -9,17 +9,21 @@
     <ion-content padding>
         <ion-list>
             <ion-item-divider color="secondary">Accords</ion-item-divider>
-            <button ion-item *ngFor="let p of chordsPages" (click)="openPage(p)">{{p.title}}</button>
+            <button [ngClass]="{'active':p == currentPage}" ion-item *ngFor="let p of chordsPages" (click)="openPage(p)">{{p.title}}</button>
         </ion-list>
 
         <ion-list>
             <ion-item-divider color="secondary">Notes</ion-item-divider>
-            <button ion-item *ngFor="let p of notesPages" (click)="openPage(p)">{{p.title}}</button>
+            <button [ngClass]="{'active':p == currentPage}" ion-item *ngFor="let p of notesPages" (click)="openPage(p)">{{p.title}}</button>
         </ion-list>
 
         <ion-list>
             <ion-item-divider color="secondary">Gammes</ion-item-divider>
-            <button ion-item *ngFor="let p of scalesPages" (click)="openPage(p)">{{p.title}}</button>
+            <button [ngClass]="{'active':p == currentPage}" ion-item *ngFor="let p of scalesPages" (click)="openPage(p)">{{p.title}}</button>
+        </ion-list>
+
+        <ion-list>
+            <button ion-item icon-left [ngClass]="{'active':settingsPage[0] === currentPage}" (click)="openPage(settingsPage[0])"><ion-icon name="settings"></ion-icon> {{ 'Settings' | translate }}</button>
         </ion-list>
     </ion-content>
 
