--- a/src/components/note-card/note-card.html
+++ b/src/components/note-card/note-card.html
@@ -6,7 +6,7 @@
     <musical-note [clef]="_clef" [note]="_note" [singlePosition]="_singlePosition"></musical-note>
 
     <div class="buttons">
-        <button ion-button icon-left (click)="showDetail()"><ion-icon name="musical-note"></ion-icon>Détail</button>
+        <button ion-button icon-left (click)="showDetail()"><ion-icon name="musical-note"></ion-icon>{ 'Details' | translate }</button>
     </div>
 
 </ion-card>
